<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProdutoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/editTextNome"
            android:text="@string/nome_produto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

        <Spinner
            android:id="@+id/spinnerUnidade"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/unidades"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUnidade" />

        <TextView
            android:id="@+id/textViewUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/spinnerUnidade"
            android:text="@string/unidade_medida"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <RadioGroup
            android:id="@+id/radioGroupPrioridade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrioridade">

            <RadioButton
                android:id="@+id/radioButtonUrgente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urgente" />

            <RadioButton
                android:id="@+id/radioButtonOpcional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcional" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewPrioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/radioGroupPrioridade"
            android:text="@string/prioridade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUnidade" />

        <CheckBox
            android:id="@+id/checkBoxFavorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/favorito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPrioridade" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="salvarValores"
            android:text="@string/salvar"
            app:layout_constraintEnd_toStartOf="@+id/buttonLimpar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFavorito" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSalvar"
            app:layout_constraintTop_toTopOf="@+id/buttonSalvar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>